--- a/hudi-utils/pom.xml
+++ b/hudi-utils/pom.xml
@@ -27,7 +27,7 @@
 
     <properties>
         <jdk.version>1.8</jdk.version>
-        <hudi.version>0.13.0-SNAPSHOT</hudi.version>
+        <hudi.version>0.14.0-SNAPSHOT</hudi.version>
         <hudi.spark.module>hudi-spark2</hudi.spark.module>
         <scala.binary.version>2.11</scala.binary.version>
         <junit.version>4.11</junit.version>
@@ -72,6 +72,12 @@
           <groupId>org.apache.hudi</groupId>
           <artifactId>hudi-flink</artifactId>
           <version>${hudi.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.hive</groupId>
+            <artifactId>hive-common</artifactId>
+            <version>2.3.1</version>
         </dependency>
 
         <!-- Logging -->
